@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/Attic/man-pages-pl-20070126.ebuild,v 1.1 2007/05/06 14:25:39 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/Attic/man-pages-pl-20070126.ebuild,v 1.2 2007/06/21 19:05:50 spock Exp $
 
 DESCRIPTION="A collection of Polish translations of Linux manual pages."
 HOMEPAGE="http://ptm.linux.pl/"
@@ -27,7 +27,7 @@ src_unpack() {
 	mans="gendiff.1 groups.1 apropos.1 man.1 su.1 newgrp.1 whatis.1 gpasswd.1 chsh.1 \
 			chfn.1 limits.5 login.1 expiry.1 porttime.5 lastlog.8 faillog.8 logoutd.8 \
 			rpm.8 rpmdeps.8 rpmbuild.8 rpmcache.8 rpmgraph.8 rpm2cpio.8 evim.1 vim.1 \
-			vimdiff.1 vimtutor.1 ex.1 rview.1 rvim.1 view.1 suauth.5"
+			vimdiff.1 vimtutor.1 ex.1 rview.1 rvim.1 view.1 suauth.5 mc.1"
 	for page in ${mans} ; do
 		sed -i -e "/\\t${page}/ d" man${page: -1}/Makefile.am
 	done
